--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
 
+    <div id="search-container">
+        <input type="text" id="province-search" placeholder="Buscar provincia...">
+        <button id="search-button">Buscar</button>
+    </div>
+
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
