Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 
     <div id="search-container">
-        <input type="text" id="province-search" placeholder="Buscar provincia...">
+        <input type="text" id="province-search" placeholder="Buscar provincia..." list="province-list">
+        <datalist id="province-list">
+            </datalist>
         <button id="search-button">Buscar</button>
     </div>
 
