--- a/index.html
+++ b/index.html
@@ -4,26 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa Interactivo de Argentina</title>
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div id="search-container">
         <input type="text" id="province-search" placeholder="Buscar provincia..." list="province-list">
-        <datalist id="province-list">
-            </datalist>
+        <datalist id="province-list"></datalist>
         <button id="search-button">Buscar</button>
     </div>
 
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
-    
     <script src="script.js"></script>
 
 </body>
